app/assets/css/parts/_player-quick-look.scss
.player-quick-look {
  @include inset-shadow();

  .player.with-overlay & {
    @include overlay-modifiers();
  }
}

.player-quick-look__form {
  overflow: hidden;
  padding-right: 0;
  width: calc(75% + 5px);
}

.player-quick-look__form__matches {
  line-height: 40px;
  height: 40px;
  direction: rtl;
  text-align: left;
  overflow: hidden;
  position: relative;
  padding-right: 10px;

  &:after {
    position: absolute;
    top: 50%;
    left: 0;
    right: -10px;
    transform: translateY(-50%);
    height: 1px;
    background: #bbb;
    pointer-events: none;
    content: "";
  }
}

.player-quick-look__form__match {
  font-size: 10px;
  display: inline-block;
  margin-right: 3px;
  position: relative;
  transform-origin: center center;
  transition: transform ease .2s;
  transition-delay: 1s;
  will-change: transform;
  opacity: .4;

  &:hover {
    opacity: 1;
  }
}

.player-quick-look__kd {
  padding-left: 10px;
  width: calc(25% - 5px);
}

.player-quick-look__kd__nr {
  letter-spacing: -1px;
  font-weight: normal;
  font-size: 1.5em;
  line-height: 40px;
  position: relative;

  &:before,
  &:after {
    @include icon();
    @include align-vertically();
    position: absolute;
    font-size: 13px;
    color: #bbb;
    left: -8px;
  }

  &:before {
    transform: translate(-100%, -10px);
    content: "\e5c7";
  }

  &:after {
    transform: translate(-100%, -3px);
    content: "\e5c5";
  }
}

.player-quick-look__hide-stats {
  min-height: 10.82em;
  position:relative;
  .row {
    margin-top: .5em;
    margin-bottom: .5em;
  }
}

.hide-stats__no-stats {
  text-align: center;
  margin-top: 2em;
}

.hide-stats__header {
  margin: 0;
  text-align: center;
  font-size: .8em;
}

.hide-stats__labels {
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
  margin-right: 0;
  margin-left: 0;
  margin-bottom: 14px !important;
  .col-xs-3 {
    padding-right: 10px;
    padding-left: 10px;
    text-align: center;
  }
}

